# moniteria

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MONIE_DESIGN_SYSTEM.md  README.md  REFACTORING_PLAN.md  docker-compose.yml  example.env
backend/: README.md  conftest.py  example.env  pyproject.toml
backend/budget_accounts/: api.py  exceptions.py  models.py  schemas.py  services.py
backend/budget_periods/: api.py  exceptions.py  factories.py  models.py  schemas.py  services.py
backend/budgets/: api.py  exceptions.py  factories.py  models.py  schemas.py  services.py  tests.py
backend/categories/: api.py  exceptions.py  factories.py  models.py  schemas.py  services.py  tests.py
backend/common/: auth.py  crypto.py  email.py  exceptions.py  json_encoder.py  models.py  permissions.py  querysets.py  throttle.py  tokens.py
backend/config/: settings.py  test_settings.py  urls.py  utils.py
backend/core/: api.py  constants.py  factories.py  legal.py  legal_api.py
backend/currency_exchanges/: api.py  exceptions.py  factories.py  models.py  schemas.py  services.py
backend/exchange_shortcuts/: admin.py  api.py  apps.py  exceptions.py  factories.py  models.py  schemas.py  services.py
backend/period_balances/: api.py  exceptions.py  factories.py  models.py  schemas.py  services.py
backend/planned_transactions/: api.py  exceptions.py  factories.py  models.py  schemas.py  services.py
backend/reports/: api.py  exceptions.py  services.py  tests.py
backend/transactions/: api.py  exceptions.py  factories.py  models.py  schemas.py  services.py  tests.py
(+202 files in other folders)
